--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -10,9 +10,14 @@
     max-width: 1024px;
     margin: 20px 0px 100px 0px;
 }
+.headerContainer.listMode {
+    margin: 20px 0px 0px 0px;
+  }
+  
 .headerlist{
     display: flex;
     gap: 40px;
+    margin-bottom: 10px;
 }
 .headerlistItem{
     display: flex;
